--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -3,7 +3,6 @@
 {% load i18n %}
 {% load bookmark_tags %}
 {% load comments %}
-{% load compressed %}
 
 {% block head_title %}{{ bookmark.title }}{% endblock %}
 {% block body %}
@@ -48,6 +47,9 @@
     var USER_NAME  = "{{user.username}}";
     var bookmark_id = {{ bookmark.id }};
 </script>
-{% compressed_js 'bookmark_detail' %}
+<script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/app_base.js"></script>
+<script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/comment.js"></script>
+<script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/bookmark_detail_init.js"></script>
+<script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/bookmark_embed.js"></script>
 {% endblock %}
 
