--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -1,6 +1,5 @@
 {% extends 'site_base.html'%}
 {% load i18n %}
-{% load compressed %}
 {% load profiles_tags %}
 {% load agon_tags %}
 {% load kaleo_tags %}
@@ -12,7 +11,6 @@
 
 {% block head_title %}{{ user.username }}{% endblock %}
 {% block body_class %}bookmark-app{% endblock %}
-
 
 {% block nav %}
 <ul class="nav">
@@ -584,7 +582,10 @@
             data: JSON.stringify({'state': 2 }), contentType: "application/json"});
     })
 </script>
-{% compressed_js 'main' %}
+<script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/app_base.js"></script>
+<script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/bookmark.js"></script>
+<script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/comment.js"></script>
+<script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/app.js"></script>
 {% endblock %}
 {% block footer_base %}
 {% endblock%}
