--- a/lianpeng/templates/site_base.html
+++ b/lianpeng/templates/site_base.html
@@ -1,15 +1,17 @@
 {% extends "theme_base.html" %}
 
+{% load compress %}
 {% load metron_tags %}
 {% load i18n %}
 {% load staticfiles%}
+
 {% block style_base %}
     <meta property="wb:webmaster" content="26edd2ff75a2a8fc" />
+    {% compress css %}
     <link href="{% static "pinax/css/theme.css" %}" rel="stylesheet">
     <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
     <link href="{% static "js/select2/select2.css" %}" rel="stylesheet">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bbtn.css" type="text/css" media="screen" charset="utf-8">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
     <!--[if IE 6]>
     <link href="{% static "css/ie6.css" %}" rel="stylesheet">
     <![endif]-->
@@ -65,6 +67,8 @@
         }
     </style>
     {% block extra_style %}{% endblock %}
+    {% endcompress %}
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
 {% endblock %}
 {% block nav %}
 <ul class="nav">
@@ -106,10 +110,11 @@
             <a href="#" class="btn btn-primary confirm">{% trans "Confirm" %}</a>
         </div>
     </div>
+    {% compress js %}
     <script src="{% block jquery_src %}{% static "pinax/js/jquery.js" %}{% endblock %}"></script>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
     <script src="{% static "pinax/js/theme.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/base.js?v=4" %}" charset="utf-8"></script>
+    <script type="text/javascript" src="{% static "js/base.js" %}" charset="utf-8"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/jquery.noty.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/layouts/top.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/themes/default.js?v=2" charset="utf-8"></script>
@@ -117,6 +122,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/select2/select2_locale_zh-CN.js" charset="utf-8"></script>
     <script src="{% static "js/eldarion-ajax.min.js" %}"></script>
     {% block extra_script %}{% endblock %}
+    {% endcompress %}
 {% endblock %}
 {% block body_base %}
     <div class="container body-container">
