--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -894,3 +894,16 @@ footer {
 .icon-heart.text-error {
     color:#e74c3c;
 }
+
+.note-app {
+    #content {
+        font-size: 16px;
+        line-height:24px;
+    }
+    .title {
+        color: #1dc499;
+    }
+    ul.posts li{
+        margin: 5px 0;
+    }
+}
