change gmail icon

--- a/harvest/templates/harvest/bookmarklet.html
+++ b/harvest/templates/harvest/bookmarklet.html
@@ -79,7 +79,7 @@
                 <label class="checkbox inline">通过邮件分享：</label>
                 <label class="radio inline">
                     <input name="share" type="radio" class="share-by-email" value="gmail"/>
-                    <img src="https://mail.google.com/favicon.ico" width="20px"/> Gmail
+                    <img src="https://icons.duckduckgo.com/ip2/mail.google.com.ico" width="20px"/> Gmail
                 </label>
                 <label class="radio inline">
                     <input type="radio" name="share" class="share-by-email" value="qqmail" />
